tests/miniJava/neg/006837_mutation.MiniJava
class static { public static void Main ( String [ ] java ) { { } } }
